# voxlight

./: .clang-format  .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  sh.glsl  sh2.glsl  sh3.cpp
cmake/: LinkENTT.cmake  LinkGLAD.cmake  LinkGLFW.cmake  LinkGLM.cmake  LinkPUGIXML.cmake  LinkSPGLOG.cmake  LinkSTB.cmake
cmake/toolchains/: windows_gcc.cmake  windows_msvc.cmake
examples/test/: CMakeLists.txt  main.cpp  test_system.hpp
include/: voxlight_api.hpp
include/core/: components.hpp  event_manager.hpp  voxlight.hpp
include/rendering/: render_system.hpp
include/voxlight/: voxlight_api.hpp
include/voxlight/core/: components.hpp  event.hpp  event_data.hpp  event_manager.hpp  system.hpp  voxel_data.hpp  voxlight.hpp
include/voxlight/rendering/: render_data.hpp  render_system.hpp  render_utils.hpp  shader.hpp  voxel_world.hpp
include/voxlight/utils/: ogt_vox.h
shaders/: fragmentShader.glsl  fragmentShader.txt  lightingFragmentShader.glsl  lightingVertexShader.glsl  vertexShader.glsl  vertexShader.txt
shaders/sunlight/: fragment_shader.glsl
shaders/voxel/: fragment_shader.glsl
src/: CMakeLists.txt  CPURenderer.cpp  Camera.cpp  Chunk.cpp  Engine.cpp  VoxelMap.cpp  VoxelObject.cpp  VoxelSystem.cpp  VoxelWorld.cpp  main.cpp  utils.cpp
src/api/: camera_component_api.cpp  engine_api.cpp  entity_api.cpp  voxel_component_api.cpp  world_api.cpp
src/core/: voxel_data.cpp  voxlight.cpp
src/include/: CPURenderer.hpp  Camera.hpp  Chunk.hpp  Engine.hpp  GameMode.hpp  ICamera.hpp  Octree.hpp  VoxelMap.hpp  VoxelObject.hpp  VoxelSystem.hpp  VoxelWorld.hpp  utils.hpp
src/rendering/: render_system.cpp  render_utils.cpp  shader.cpp  voxel_world.cpp
src_v2/: CMakeLists.txt  camera_component_api.cpp  controller_system.cpp  engine_api.cpp  engine_config.hpp  entity_api.cpp  render_system.cpp  render_utils.cpp  shader.cpp  system.hpp  voxel_component_api.cpp  voxel_engine.cpp  voxel_engine.hpp  voxel_world.cpp  voxlight.cpp  voxlight.hpp  world_system.cpp
src_v2/api/: voxlight_api.hpp
src_v2/controller/: camera.hpp  controller_system.cpp  controller_system.hpp
src_v2/core/: components.hpp  voxel_data.hpp
src_v2/include/: engine_config.hpp  voxlight.hpp
src_v2/include/api/: voxlight_api.hpp
src_v2/include/controller/: camera.hpp  controller_system.hpp
src_v2/include/core/: components.hpp  event.hpp  event_manager.hpp  voxel_data.hpp  voxel_world.hpp
src_v2/include/rendering/: palette.hpp  render_system.hpp  voxel_world.hpp
src_v2/include/world/: world_system.hpp
src_v2/rendering/: render_system.cpp  render_system.hpp  shader.glsl  shaders.hpp
src_v2/world/: world_system.cpp  world_system.hpp
tests/: CMakeLists.txt
tests/entity_api/: entity_api_test.cpp
tools/: generate_palette.py  generate_shader.py
